# bottled_ghosts

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RTK.md  SCHEMA.md  SPEC.md  aria.service  bork.service  bottled-ghosts.service  frauderick.service  pyproject.toml  rumi.service
bottles/: test.md
bottles/aria/: SOUL.md
bottles/bork/: SOUL.md
bottles/frauderick/: SOUL.md
bottles/moss/: SOUL.md
bottles/rumi-as/: SOUL.md
cellar/: __init__.py  __main__.py  admin_store.py  alias_store.py  cli.py  config_store.py  configure.py  dream_store.py  dreams.py  identity.py  ignore_store.py  irc.py  listening.py  llm.py  local_time.py  memory.py  memory_store.py  migrations.py  models.py  module_api.py  module_loader.py  module_store.py  nick_store.py  prompt.py  runtime.py  safety.py  storage.py
docs/adr/: ADR-001-identity-and-exact-retrieval.md  ADR-002-memory-sediment.md  ADR-003-module-hooks.md  ADR-004-explicit-dream-jobs.md  ADR-004-module-commands.md  (+10 more)
modules/: __init__.py  admin_api.py  ambient_chat.py  anti_repeat.py  bot_lives.py  channel_context.py  emergency_alert.py  fishing.py  ignore.py  moods.py
tests/: test_admin_modules.py  test_aliases.py  test_ambient_chat.py  test_anti_repeat.py  test_bot_lives.py  test_configure.py  test_cooldown.py  test_dreams.py  test_fishing.py  test_identity.py  test_ignore.py  test_irc.py  test_listening.py  test_llm.py  test_local_time.py  test_memory.py  test_modules.py  test_mood_breaks.py  test_moods.py  test_prompt.py  test_runtime.py  test_safety.py  test_storage.py  test_tui.py
tui/: __init__.py  app.py  data.py
