[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bottled-ghosts"
version = "0.1.0"
description = "A local-first IRC character engine"
requires-python = ">=3.12"
dependencies = ["aiosqlite>=0.20", "httpx>=0.27", "pydantic>=2.7"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
bottled-ghosts = "cellar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cellar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
