[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bottled-ghosts"
version = "0.1.0"
description = "A local-first IRC character engine"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10",
    "aiosqlite>=0.20,<0.22",
    "httpx>=0.27",
    "pydantic>=2.7",
    "textual>=3.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
bottled-ghosts = "cellar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cellar", "modules", "tui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
